2-color-services/4-colorapp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
spec:
  selector:
    matchLabels:
      app: blue
  replicas: 1
  template:
    metadata:
     labels:
        app: blue
    spec:
      containers:
      - image: cloudmanly/eks:blue
        imagePullPolicy: Always
        name: blue
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: blue
  labels:
    app: blue
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: blue
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green
spec:
  selector:
    matchLabels:
      app: green
  replicas: 1
  template:
    metadata:
     labels:
        app: green
    spec:
      containers:
      - image: cloudmanly/eks:green
        imagePullPolicy: Always
        name: green
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: green
  labels:
    app: green
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8081
  selector:
    app: green
