2-color-services/3-color-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: color-route
spec:
  parentRefs:
  - name: color-app-vpc-lattice-network
    sectionName: http
  rules:
  - backendRefs:
    - name: blue
      kind: Service
      port: 80
      weight: 50
    - name: green
      kind: Service
      port: 80
      weight: 50
